GGG-144 Only set federation on the generator schema.